# profix

./: .gitignore  Cargo.toml  LICENSE  README.md  diff
example_client/: Cargo.toml
example_client/src/: main.rs  messages.rs
example_server/: Cargo.toml
example_server/src/: main.rs  messages.rs
profix_derive/: Cargo.toml
profix_derive/src/: lib.rs
src/: client.rs  common.rs  deserialize.rs  factory.rs  field.rs  fix_loop.rs  handler.rs  lib.rs  message.rs  parsing.rs  serialization.rs  serialize.rs  timestamp.rs
