[package]
name = "fix"
version = "0.1.0"
authors = ["Aleksander Fular <ntszar@gmail.com>", "Piotr Mis <piotrekmis@gmail.com>"]

[dependencies]
chrono = "*"
log = "*"
native-tls = { git = "https://github.com/scottschroeder/rust-native-tls", branch = "noverify" }

metrics = {path = "../metrics"}
exchange = {path = "../exchange"}

[dev-dependencies]
quickcheck = "*"