[package]
name = "profix"
version = "0.1.0"
authors = ["Aleksander Fular <ntszar@gmail.com>", "Piotr Mis <piotrekmis@gmail.com>"]

[dependencies]
chrono = "*"
log = "*"
native-tls = { git = "https://github.com/scottschroeder/rust-native-tls", branch = "noverify" }

profix_derive = {path = "profix_derive"}

[dev-dependencies]
quickcheck = "*"
